[gd_scene load_steps=6 format=3 uid="uid://d0frtplj2morq"]

[ext_resource type="Script" path="res://Scenes/leaderboard.gd" id="1_whtpc"]
[ext_resource type="Texture2D" uid="uid://de4hbrn0f16ni" path="res://Assets/Shake the Can/shake-the-can-background.png" id="2_oljek"]
[ext_resource type="Shader" path="res://Shaders/MainMenu.gdshader" id="3_icc48"]
[ext_resource type="Texture2D" uid="uid://dvd2ycb5wrl66" path="res://Sprites/Main Menu/bubblebabe sticker.png" id="4_4gmhf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mqgl5"]
shader = ExtResource("3_icc48")
shader_parameter/scroll_speed = 0.08
shader_parameter/angle_degrees = 45.0
shader_parameter/repeat_x = 20.0
shader_parameter/repeat_y = 1.854
shader_parameter/row_offset = 1.0
shader_parameter/texture_to_scroll = ExtResource("4_4gmhf")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_whtpc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_oljek")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_mqgl5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 265
theme_override_constants/margin_top = 275
theme_override_constants/margin_right = 240

[node name="High Score" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "HIGH SCORE"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 145
theme_override_constants/margin_right = 70

[node name="Enter Name" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 82
placeholder_text = "Enter Name"
alignment = 1
max_length = 5

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 195
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 195

[node name="Submit Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
text = "Submit"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 195
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 195

[node name="Menu Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2
text = "Menu"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 105

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2

[node name="FirstName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "1st "

[node name="FirstScore" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = " 0000"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 105

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2"]
layout_mode = 2
alignment = 1

[node name="SecondName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "2nd"

[node name="SecondScore" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = " 0000"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 105

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer3"]
layout_mode = 2

[node name="ThirdName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer3/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "3rd"

[node name="ThirdScore" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer3/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = " 0000"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 105

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer4"]
layout_mode = 2

[node name="FourthName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer4/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "4th"

[node name="FourthScore" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer4/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = " 0000"

[node name="MarginContainer5" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 105

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer5"]
layout_mode = 2

[node name="FifthName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer5/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "5th"

[node name="FifthScore" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/MarginContainer5/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = " 0000"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer3/Submit Button" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer4/Menu Button" to="." method="_on_menu_button_pressed"]
